# heimdall-src

./: .env.example  .gitignore  LICENSE  Makefile  README.md  conftest.py  dev-stack.sh  dvc.yaml  experiments  pyproject.toml  setup.sh  tools
.dvc/: config
.github/workflows/: pr.yml  release.yml
app/agent-runner/: pyproject.toml
app/agent-runner/src/heimdall_agent_runner/: __init__.py  reflex.py
app/agent-runner/tests/: test_reflex.py
app/conformal-calibrator/: pyproject.toml
app/conformal-calibrator/src/heimdall_conformal_calibrator/: __init__.py  service.py
app/conformal-calibrator/tests/: test_service.py
app/focal-orchestrator/: pyproject.toml
app/focal-orchestrator/src/heimdall_focal_orchestrator/: __init__.py  pipeline.py
app/forecaster/: pyproject.toml
app/forecaster/src/heimdall_forecaster/: __init__.py  f9_eval.py  fallback.py  service.py  timesfm_wrapper.py
app/forecaster/src/heimdall_forecaster/inference/: __init__.py  cache.py  hf_hydrator.py  protocol.py  registry.py
app/forecaster/src/heimdall_forecaster/inference/backends/: __init__.py  ar1_fallback.py  f0_seasonal_ar.py  f10_chronos_bolt.py  f11_pricefm.py  f12_multizone.py  f13_multivariate.py  f1_lgbm.py  f2_blr.py  f3_deep_ensemble.py  f3_lite_deepar.py  f4_mc_dropout.py  f5_f6_neural_process.py  f7_patch_tst.py  f8_patch_tst.py  f9_timesfm.py
app/forecaster/src/heimdall_forecaster/train/: __init__.py  _utils.py  activation_direction_classifier.py  canonical.py  dataset.py  f0_ar.py  f12_multizone.py  f1_lgbm.py  f2_blr.py  f3_deepar.py  f3_ensemble.py  f4_mc_dropout.py  f5_f6_neural_process.py  model.py  run.py  trainer.py  wrap_aci.py
app/forecaster/src/heimdall_forecaster/train/configs/: f11.yaml  f13.yaml  f5.yaml  f6.yaml  f7.yaml  f7_optuna.yaml  f8.yaml  f8b.yaml  f8c.yaml  f8d.yaml  f8e.yaml  f8w72.yaml  f8w_da.yaml
app/forecaster/tests/: test_canonical_smoke.py  test_forecaster.py  test_train.py
app/frontend/: .gitignore  TESTING.md  package.json  playwright.config.ts  vitest.config.ts
app/frontend/e2e/: dashboard.spec.ts  fullstack.spec.ts
app/market-simulator/: pyproject.toml
app/market-simulator/src/heimdall_market_simulator/: __init__.py  mock_market.py
app/market-simulator/tests/: test_mock_market.py
app/pypsa-scenario/: pyproject.toml
app/pypsa-scenario/src/heimdall_pypsa_scenario/: __init__.py  service.py
app/pypsa-scenario/tests/: test_service.py
app/run-view/: pyproject.toml
app/run-view/src/heimdall_run_view/: __init__.py  _catalog.py  _db.py  _forecaster.py  _graph.py  _priority.py  _snapshot.py  _trace.py  _utils.py  adapter.py  cli.py  database.py  service.py
app/run-view/tests/: test_adapter.py  test_database_backed_service.py  test_frontend_contract.py
app/verifier/: pyproject.toml
app/verifier/src/heimdall_verifier/: __init__.py  calibrator.py  conformal.py  physical.py  scenario_loader.py  service.py
app/verifier/tests/: test_calibrator.py  test_integration.py  test_property_verifier.py  test_verifier.py
deploy/: Dockerfile.service  docker-compose.mark-stack.yml  docker-compose.run-view.yml
deploy/argocd/: heimdall-app.yaml
deploy/helm/heimdall/: Chart.yaml  values.yaml
deploy/observability/: docker-compose.yml
deploy/observability/prometheus/: heimdall.rules.yml  prometheus.yml
docs/: REPRODUCE.md
research/llm/ai-society/: AGENT-MODELS.md  SOCIETY-PLAN.md  docker-compose.yml  monitor_profit_window_batch.sh  run_ablation_batch.py  run_long_model_society_matrix.py  run_market_intelligence_stage.py  run_mixed_sideaware_batch.py  run_ollama_society_matrix.py  run_overnight_deterministic_baselines.py  run_profit_window_batch.sh  setup-cloud.sh
research/ml/experiments/: backtest_6yr_replay.py  baselines.py  baselines_b3_hagstrom_herre.py  baselines_b3_hh_ev_sanity.py  baselines_b3_hyperparam_sweep.py  baselines_classical.py  baselines_focal_agent.py  build_leaderboard.py  eval_f10_chronos_bolt.py  eval_f9_timesfm_zoo.py  ke1_volatility_signal.py  ke2_data_quality.py  ke3_latency.py  multi_metric_panel.py  multizone_aci_panel.py  rebuild_test_results.py  run_aci_gamma_sweep.py  run_b4_ppo_parallel.py  run_bocpd.py  seed_sweep.py  test_set_aci_coverage.py  test_set_evaluation.py  verifier_stress.py
research/scripts/: build_figures.py
research/tools/: backfill_aug_2024.py  backfill_commodity_prices.py  build_dk1_panels.py  build_forecast_error_features.py  build_multi_zone_panel.py  build_rich_splits.py  build_weather_forecast_stacks.py  data_bundle.py  data_readiness_audit.py  fetch_dk1_history.py  fetch_markets.py  finalize_metrics.py  generate_model_cards.py  get_data.sh  ingest_public_features.py  post_train_pipeline.sh  probe_timesfm_25.py  push_hf.py  retry_hf_push.sh  run-tests.sh  run_f11_seeds.sh  run_f13_parallel.sh  run_f13_sequential.sh  run_f7_optuna_sweep.sh  run_f8_multivariate.sh  run_f8_multivariate_20ep.sh  run_f8b_100ep.sh  synthetic_bank.py  tim_inference_quickstart.py  tim_smoke.py  upload_hf_all.py  zenodo_bundle.py
research/tools/analysis/: freeform_proposal_source.py
research/tools/data/: build_simulator_fixture.py  fetch_eds.py  prepare_evaluation_truth.py  (+1 more)
tests/: test_agent_forecast_verifier.py  test_agent_mfrr_tool.py  test_capacity_oracle.py  test_cli_smoke.py  test_counterfactual_response.py  test_data_config.py  test_e2e_pipeline.py  test_eds.py  test_env_loading.py  test_ev_virtual_battery.py  test_evaluation.py  test_fixture_builder.py  test_forecast_state.py  test_hf_hydrator.py  test_inference_f10_f11.py  test_inference_integration.py  test_integration_eds_smoke.py  test_integration_forecast_agent_tool_real_eds.py  test_integration_mfrr_engine_real_eds.py  test_integration_pypsa_eur.py  test_leakage.py  test_manifest.py  test_mfrr_engine.py  test_mfrr_market.py  test_physical_verifier.py  test_prepare_evaluation_truth.py  test_prepare_real_context.py  test_pypsa_adapter.py  test_pypsa_config.py  test_pypsa_eursec_costs.py  test_pypsa_scenario_bundle.py  test_real_asset_simulators.py  test_rescore_downside.py  test_simulator_replay.py  test_traders_loaders.py
(+4101 files in other folders)
