[project]
name = "heimdall"
version = "0.0.1"
description = "Verifier-guarded LLM-agent society for the Nordic 15-min mFRR balancing market (BSc thesis, SDU + Danfoss)."
requires-python = ">=3.12,<3.13"
authors = [
  { name = "Phongsakon Konrad" },
  { name = "Tim Lukas Adam" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
  # Mark-track workspace members
  "heimdall-contracts",
  "heimdall-ml",
  "heimdall-markets",
  "heimdall-personas",
  "heimdall-data",
  "heimdall-verifier",
  "heimdall-forecaster",
  "heimdall-agent-runner",
  "heimdall-market-simulator",
  "heimdall-focal-orchestrator",
  "heimdall-conformal-calibrator",
  "heimdall-pypsa-scenario",
  "heimdall-run-view",
  # Mark-track runtime deps
  "polars>=1.0",
  "pyarrow>=15",
  "entsoe-py>=0.7",
  "requests>=2.32",
  "tenacity>=8",
  "pytest-httpx>=0.30",
  "statsmodels>=0.14.6",
  "lightgbm>=4.6.0",
  "huggingface-hub>=1.14.0",
  # Tim-track runtime deps (merged from origin/dev d9ed874)
  "highspy>=1.12",
  "linopy>=0.5",
  "pandas>=2.2,<3.0",
  "pypsa>=1.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "typer>=0.16",
  "timesfm>=1.3.0",
  "holidays>=0.96",
  "scikit-learn>=1.8.0",
  "arch>=8.0.0",
  "prophet>=1.3.0",
  "gpytorch>=1.15.2",
  "optuna>=4.8.0",
]

[tool.uv.workspace]
members = [
  "packages/contracts",
  "packages/ml",
  "packages/personas",
  "packages/markets",
  "packages/data",
  "app/forecaster",
  "app/verifier",
  "app/agent-runner",
  "app/market-simulator",
  "app/focal-orchestrator",
  "app/conformal-calibrator",
  "app/pypsa-scenario",
  "app/run-view",
]

[tool.uv.sources]
heimdall-contracts          = { workspace = true }
heimdall-ml                 = { workspace = true }
heimdall-personas           = { workspace = true }
heimdall-markets            = { workspace = true }
heimdall-data               = { workspace = true }
heimdall-verifier           = { workspace = true }
heimdall-forecaster         = { workspace = true }
heimdall-agent-runner       = { workspace = true }
heimdall-market-simulator   = { workspace = true }
heimdall-focal-orchestrator = { workspace = true }
heimdall-conformal-calibrator = { workspace = true }
heimdall-pypsa-scenario     = { workspace = true }
heimdall-run-view           = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.4",
  "pytest-cov>=5",
  "pytest-asyncio>=0.23",
  "hypothesis>=6.130",
  "ruff>=0.6",
  "mypy>=1.10",
  "httpx>=0.27",
  "dvc>=3.67.1",
  # Architecture artefacts: figures + enforced layering. See
  # scripts/build_figures.py and the [tool.importlinter] section below.
  "pylint>=3.3",         # ships pyreverse for autogen class diagrams
  "pydeps>=3.0",         # inter-package import graph
  "import-linter>=2.0",  # CI-enforced architectural layering
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004", "E501"]

[tool.ruff.lint.per-file-ignores]
# Thesis figure generators use the conventional capitalised module aliases
# `import _data as D` / `import _style as S` for terse, readable plotting code.
"manuscript/figures/**" = ["N812"]

[tool.pytest.ini_options]
# Mark-track (uv-workspace per-package tests) plus Tim-track (flat layout) discovery.
# pythonpath="." preserves Tim's flat-namespace imports (e.g. `from packages.simulator import ...`).
testpaths = [
  "tests",
  "packages",
  "packages/contracts/tests",
  "packages/ml/tests",
  "packages/personas/tests",
  "packages/markets/tests",
  "packages/data/tests",
  "app/forecaster/tests",
  "app/verifier/tests",
  "app/agent-runner/tests",
  "app/market-simulator/tests",
  "app/focal-orchestrator/tests",
  "app/conformal-calibrator/tests",
  "app/pypsa-scenario/tests",
  "app/run-view/tests",
  "research/llm/ai-society/tests",
]
# "." preserves Tim's flat imports (`from packages.simulator import ...`);
# "ai-society/src" makes `heimdall_ai_society` importable (it has no pyproject /
# is not a uv-workspace member, so its tests would otherwise fail to collect).
pythonpath = [".", "research", "research/llm/ai-society/src"]
# `importlib` mode disambiguates same-named test modules across test dirs
# (Mark's `packages/ml/tests/test_leakage.py` vs Tim's `tests/test_leakage.py`)
# until the joint structural cleanup lands. Without it, pytest's default
# import-mode collides on basename.
addopts = "-ra --strict-markers --import-mode=importlib"
markers = [
  "slow: integration tests that download or load larger optional models",
  "gpu: requires a live GPU / vLLM endpoint (skipped in CPU CI)",
  "integration: cross-service / cross-package integration tests",
  "e2e: end-to-end pipeline tests (forecast -> tool -> verifier -> market -> trace)",
  "property: property-based (Hypothesis) tests over invariants / theorem guarantees",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true


# Architectural layering enforced in CI. The thesis Chapter 2 claims a
# contract-first, no-direct-service-to-service architecture; import-linter
# turns those claims into a build-time check rather than just a diagram.
# Run locally with: uv run lint-imports
[tool.importlinter]
root_packages = [
  "heimdall_contracts",
  "heimdall_ml",
  "heimdall_markets",
  "heimdall_personas",
  "heimdall_data",
  "heimdall_verifier",
  "heimdall_forecaster",
  "heimdall_agent_runner",
  "heimdall_market_simulator",
  "heimdall_focal_orchestrator",
  "heimdall_conformal_calibrator",
  "heimdall_run_view",
]

[[tool.importlinter.contracts]]
name = "Contracts package depends on nothing internal"
type = "forbidden"
source_modules = ["heimdall_contracts"]
forbidden_modules = [
  "heimdall_ml",
  "heimdall_markets",
  "heimdall_personas",
  "heimdall_data",
  "heimdall_verifier",
  "heimdall_forecaster",
  "heimdall_agent_runner",
  "heimdall_market_simulator",
  "heimdall_focal_orchestrator",
  "heimdall_conformal_calibrator",
  "heimdall_run_view",
]

[[tool.importlinter.contracts]]
name = "Services do not import each other directly (they cross via contracts only)"
type = "independence"
modules = [
  "heimdall_verifier",
  "heimdall_forecaster",
  "heimdall_agent_runner",
  "heimdall_market_simulator",
  "heimdall_focal_orchestrator",
  "heimdall_conformal_calibrator",
  "heimdall_run_view",
]
ignore_imports = [
  # focal-orchestrator legitimately composes the forecaster + verifier as a
  # library; this is the only sanctioned in-process composition and is
  # documented in chapter 2.
  "heimdall_focal_orchestrator.pipeline -> heimdall_forecaster",
  "heimdall_focal_orchestrator.pipeline -> heimdall_verifier.service",
  "heimdall_focal_orchestrator.pipeline -> heimdall_verifier.physical",
]
