[project]
name = "heimdall-agent-runner"
version = "0.0.1"
description = "Per-agent LLM-call executor. Day-1: reflex baseline; vLLM integration deferred to Week 1 day 5-6 (sprint §7.3)."
requires-python = ">=3.12,<3.13"
dependencies = [
  "heimdall-contracts",
  "heimdall-personas",
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heimdall_agent_runner"]
