[project]
name = "heimdall-conformal-calibrator"
version = "0.0.1"
description = "Conformal-calibrator service (proposal §6.2 service #8). Serves split-CP / online-ACI / EnbPI / BOCPD-ACI intervals."
requires-python = ">=3.12,<3.13"
dependencies = [
  "heimdall-contracts",
  "heimdall-ml",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heimdall_conformal_calibrator"]
