[project]
name = "heimdall-market-simulator"
version = "0.0.1"
description = "Minimal Nordic mFRR mock for end-to-end smoke tests. Full PyPSA-Eur-Sec integration deferred (sprint §7.3 day 3-4)."
requires-python = ">=3.12,<3.13"
dependencies = [
  "heimdall-contracts",
  "heimdall-markets",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heimdall_market_simulator"]
