[project]
name = "heimdall-pypsa-scenario"
version = "0.0.1"
description = "PyPSA-scenario service (proposal §6.2 service #11). Serves AssetSpec + scenario JSON sourced from PyPSA-Eur-Sec costs."
requires-python = ">=3.12,<3.13"
dependencies = [
  "heimdall-contracts",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pypsa>=1.0",
  "linopy>=0.5",
  "highspy>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heimdall_pypsa_scenario"]
