[project]
name = "heimdall-run-view"
version = "0.1.0"
description = "Frontend-ready replay view API for Heimdall agent and simulator traces."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "psycopg[binary]>=3.2",
  "pyyaml>=6.0",
  "typer>=0.16",
]

[project.scripts]
heimdall-run-view = "heimdall_run_view.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heimdall_run_view"]
