[project]
name = "heimdall-verifier"
version = "0.0.1"
description = "Two-stage verifier (physical + conformal). Per docs/RESEARCH-PROPOSAL.md §4.5, §4.6."
requires-python = ">=3.12,<3.13"
dependencies = [
  "heimdall-contracts",
  "heimdall-ml",
  "heimdall-markets",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heimdall_verifier"]
